<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/flSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilFIO"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/fio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFIO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilClass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/my_class_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/tgPupilOrTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                app:checkedButton="@+id/btPupil"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btPupil"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pupil" />

                <Button
                    android:id="@+id/btTeacher"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/flSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_rounded18_top"
        android:elevation="1dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSave"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:alpha="0.4"
            android:clickable="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>